--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-prod": "ENDPOINT=pnsd-pred.yushengwu.com/api && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
